mychatappv4/src/main/java/com/example/mychatappv4/errors/InvalidTokenException.java
package com.example.mychatappv4.errors;

public class InvalidTokenException extends RuntimeException {
    public InvalidTokenException(String message) {
        super(message);
    }
}
